[gd_scene load_steps=4 format=3 uid="uid://o45mgs0stnnr"]

[ext_resource type="Script" path="res://script/IntroDialogue.gd" id="1_cqtje"]
[ext_resource type="Texture2D" uid="uid://bfdprld82uvsj" path="res://assets/images/dialogue_bubble.png" id="2_kpoa8"]
[ext_resource type="Texture2D" uid="uid://bw7c7jptq7xlm" path="res://assets/images/maire_.png" id="3_yqbfb"]

[node name="IntroDialogue" type="CanvasLayer"]
script = ExtResource("1_cqtje")
dialogue_file = "res://json/dialogue.json"

[node name="BackBlocMouse" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BulleBackground" type="NinePatchRect" parent="BackBlocMouse"]
layout_mode = 0
offset_left = 229.0
offset_top = 68.0
offset_right = 1446.0
offset_bottom = 689.0
texture = ExtResource("2_kpoa8")
region_rect = Rect2(133, 21, 576, 300)
patch_margin_top = 6

[node name="NomMaireLblPeterDeThune" type="RichTextLabel" parent="BackBlocMouse/BulleBackground"]
layout_mode = 0
offset_left = 299.0
offset_top = 40.0
offset_right = 903.0
offset_bottom = 105.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 45
theme_override_font_sizes/bold_font_size = 0
text = "Maire de Koenigshoffen-Est"

[node name="TexteLblPeterDeThune" type="RichTextLabel" parent="BackBlocMouse/BulleBackground"]
layout_mode = 0
offset_left = 55.0
offset_top = 120.0
offset_right = 1149.0
offset_bottom = 334.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true

[node name="IndicationEspaceLblDeGensPeterDeThune" type="RichTextLabel" parent="BackBlocMouse/BulleBackground"]
layout_mode = 0
offset_left = 344.0
offset_top = 368.0
offset_right = 899.0
offset_bottom = 419.0
theme_override_colors/default_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Appuyer sur <<espace>> pour passer."

[node name="Maire" type="NinePatchRect" parent="BackBlocMouse"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -622.0
offset_top = -80.0
offset_right = -115.0
offset_bottom = 438.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_yqbfb")

[node name="ColorRect" type="ColorRect" parent="BackBlocMouse"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.169
one_shot = true

[node name="Timer2" type="Timer" parent="."]

[connection signal="end_dialogue" from="." to="." method="_on_end_dialogue"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
